Static page practice

--- a/page1.html
+++ b/page1.html
@@ -82,110 +82,185 @@
             margin-left: 100px;
             
         }
+        .div2 {
+            margin-right: 130px;
+        }
+        .div3 {
+            /* margin-right: 470px; */
+            width: 60%;
+            float: left;
+        }
+        .h5 {
+            margin-right: 250px;
+        }
+        .more {
+            color: red;
+            text-decoration: none;
+        }
+        .div4 {
+            float: right;
+            width: 40%;
+        }
+        .footer {
+            background-color: #eeeeee;
+            color: silver;
+            text-align: center;
+            margin-right: 250px;
+        }
+        .footer ul {
+            margin-left : 130px;
+        }
     </style>
 </head>
 <body>
-        <div class="div1">
-            <ul>
-                <li><a class="asp" href="#asp">Asperion</a></li>
-                <li><a class="active" href="#home">Home</a></li>
-                <li><a class="about" href="#about">About Us</a></li>
-                <li><a class="margin" href="#tech">Technologies</a></li>
-                <li><a class="margin" href="#pro">Projects</a></li>
-                <li><a class="margin" href="#cont">Contacts</a></li>
-            </ul>
-            <table class="table1">
-                <tr class="tr1">
-                    <td class="td">
-                        <h3>OPEN-MINDED</h3> 
-                        <br/>
-                        <br/>
-                        Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound.  
-                        <br/>
-                        <br/>
-                        <br/>
-                        <br/>
-                        <button class="btn">more</button>
-                        <br/>
-                        <br/>
-                    </td>
-                    <td class="td">
-                        <h3>OPEN-MINDED</h3> 
-                        <br/>
-                        <br/>
-                        Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound.  
-                        <br/>
-                        <br/>
-                        <br/>
-                        <br/>
-                        <button class="btn">more</button>
-                        <br/>
-                        <br/>
-                    </td>
-                    <td class="td">
-                        <h3>OPEN-MINDED</h3> 
-                        <br/>
-                        <br/>
-                        Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound.  
-                        <br/>
-                        <br/>
-                        <br/>
-                        <br/>
-                        <button class="btn">more</button>
-                        <br/>
-                        <br/>
-                    </td>
-                    <td class="td">
-                        <h3>OPEN-MINDED</h3> 
-                        <br/>
-                        <br/>
-                        Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound. 
-                        <br/>
-                        <br/>
-                        <br/>
-                        <br/>
-                        <button class="btn">more</button>
-                        <br/>
-                        <br/>
-                    </td>
-                </tr>
-            </table>
-            <hr class="dot">
-            <h2 style="margin-right: 720px;">UPCOMING EVENTS</h2>
-            <table class="table2">
-                <tr class="tr2">
-                    <td>
-                        <h5>TIRE TECHNOLOGY EXPO</h5>
-                        Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
-                        <br/>
-                        <br/>
-                        <button class="btn2">more..</button>
-                    </td>
-                    <td>
-                        <h5>TIRE TECHNOLOGY EXPO</h5>
-                        Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
-                        <br/>
-                        <br/>
-                        <button class="btn2">more..</button>
-                    </td>
-                    <td>
-                        <h5>TIRE TECHNOLOGY EXPO</h5>
-                        Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
-                        <br/>
-                        <br/>
-                        <button class="btn2">more..</button>
-                    </td>
-                    <td>
-                        <h5>TIRE TECHNOLOGY EXPO</h5>
-                        Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
-                        <br/>
-                        <br/>
-                        <button class="btn2">more..</button>
-                    </td>
-                </tr>
+    <div class="div1">
+        <ul>
+            <li><a class="asp" href="#asp">Asperion</a></li>
+            <li><a class="active" href="#home">Home</a></li>
+            <li><a class="about" href="#about">About Us</a></li>
+            <li><a class="margin" href="#tech">Technologies</a></li>
+            <li><a class="margin" href="#pro">Projects</a></li>
+            <li><a class="margin" href="#cont">Contacts</a></li>
+        </ul>
+        <table class="table1">
+            <tr class="tr1">
+                <td class="td">
+                    <h3>OPEN-MINDED</h3> 
+                    <br/>
+                    <br/>
+                    Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound.  
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <button class="btn">more</button>
+                    <br/>
+                    <br/>
+                </td>
+                <td class="td">
+                    <h3>OPEN-MINDED</h3> 
+                    <br/>
+                    <br/>
+                    Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound.  
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <button class="btn">more</button>
+                    <br/>
+                    <br/>
+                </td>
+                <td class="td">
+                    <h3>OPEN-MINDED</h3> 
+                    <br/>
+                    <br/>
+                    Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound.  
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <button class="btn">more</button>
+                    <br/>
+                    <br/>
+                </td>
+                <td class="td">
+                    <h3>OPEN-MINDED</h3> 
+                    <br/>
+                    <br/>
+                    Every option should be explored and tried no matter how unpredictable, impossible, insane or ridiculous does it looks or sound. 
+                    <br/>
+                    <br/>
+                    <br/>
+                    <br/>
+                    <button class="btn">more</button>
+                    <br/>
+                    <br/>
+                </td>
+            </tr>
+        </table>
+        <hr class="dot">
+        <h2 style="margin-right: 720px;">UPCOMING EVENTS</h2>
+        <table class="table2">
+            <tr class="tr2">
+                <td>
+                    <h5>TIRE TECHNOLOGY EXPO</h5>
+                    Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
+                    <br/>
+                    <br/>
+                    <button class="btn2">more..</button>
+                </td>
+                <td>
+                    <h5>TIRE TECHNOLOGY EXPO</h5>
+                    Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
+                    <br/>
+                    <br/>
+                    <button class="btn2">more..</button>
+                </td>
+                <td>
+                    <h5>TIRE TECHNOLOGY EXPO</h5>
+                    Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
+                    <br/>
+                    <br/>
+                    <button class="btn2">more..</button>
+                </td>
+                <td>
+                    <h5>TIRE TECHNOLOGY EXPO</h5>
+                    Tire Technology Expo has grown in strength and stature every year since it was started in Europe 15 years ago. Visitors and exhibitors to the conference and exhibition staged in February 2014 universally praised it as the 'world's leading tire design and tire manufacturing event', noting in particular the outstanding quality of the conference papers and speakers, and the comprehensive extent of machinery manufacturers and suppliers who exhibited at the event.
+                    <br/>
+                    <br/>
+                    <button class="btn2">more..</button>
+                </td>
+            </tr>
 
-            </table>
+        </table>
+        <hr class="dot">
+        <div class="div2">
+            <div class="div3">
+                <h3>PREVIOUS PROJECTS</h3>
+                <h5 class="h5">NEURAL NETWORK FOR GOOGLE</h5>
+                <p>
+                    People from Google approached us this January with offer to create new neural network for whole Google's ecosystem. This idea was very interesting and looked almost impossible at first glance. However, our engineers proved their expertise and built amazing autonomous platform.
+                    <a class="more" href="#">more..</a>
+                </p>
+                <h5 class="h5">NEURAL NETWORK FOR GOOGLE</h5>
+                <p>
+                    People from Google approached us this January with offer to create new neural network for whole Google's ecosystem. This idea was very interesting and looked almost impossible at first glance. However, our engineers proved their expertise and built amazing autonomous platform.
+                    <a class="more" href="#">more..</a>
+                </p>
+                <h5 class="h5">NEURAL NETWORK FOR GOOGLE</h5>
+                <p>
+                    People from Google approached us this January with offer to create new neural network for whole Google's ecosystem. This idea was very interesting and looked almost impossible at first glance. However, our engineers proved their expertise and built amazing autonomous platform.
+                    <a class="more" href="#">more..</a>
+                </p>
+            </div>
+            <div class="div4">
+                <h3>OUR STANDARDS</h3>
+                <table>
+                    <tr>
+                        <td style="width: 50%;">
+                            <h5>EXCELLENCE</h5>
+                            Our goal is to give our customers the best solutions in highest aquality. Our employees strive for excellence and work hard to achieve it. Everything must work and be reliable. Great design must be both, aesthetic and functional. Product or service that pass these conditions will be everlasting.
+                        </td>
+                        <td style="width: 50%;">
+                            <h5>EXCELLENCE</h5>
+                            Our goal is to give our customers the best solutions in highest aquality. Our employees strive for excellence and work hard to achieve it. Everything must work and be reliable. Great design must be both, aesthetic and functional. Product or service that pass these conditions will be everlasting.
+                        </td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+        <div style="clear:both;">
             <hr class="dot">
         </div>
+        <div class="footer">
+            <ul>
+                <li><a style="color:black;" href="#home">Home</a></li>
+                <li><a style="color:silver;" href="#about">About Us</a></li>
+                <li><a style="color:silver;" href="#tech">Technologies</a></li>
+                <li><a style="color:silver;" href="pro">Projects</a></li>
+                <li><a style="color:silver;" href="cont">Contacts</a></li>
+            </ul>
+        </div>
+    </div>
 </body>
 </html>
