--- a/company_website.html
+++ b/company_website.html
@@ -431,9 +431,9 @@
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> Lahore, Pak</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +92 3451157264</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> m.umair.umairaftab@gmail.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
