Find weather of any city

--- a/Weather/index.html
+++ b/Weather/index.html
@@ -67,7 +67,7 @@
                   <span
                     id="temp">
                   </span>
-                  <span id="loader" id="load" class="spinner-border" role="status"
+                  <span id="loader" class="spinner-border" role="status"
                     aria-hidden="true">
                   </span>
                   <small
@@ -120,6 +120,17 @@
 
                   <li>Sunset Time is <b><span id="sunset"></span><span>ms</span></b></li>
                 </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal" tabindex="-1" id="dialogBox">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-body">
+                <h1><span class="spinner-border" role="status"
+                    aria-hidden="true">
+                  </span> Loading...</h1>
               </div>
             </div>
           </div>
