--- a/Weather/index.html
+++ b/Weather/index.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous">
+    <link rel="manifest" href="manifest.json">
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light">
@@ -244,5 +245,25 @@
       integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
       crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script>
+      window.addEventListener('load', () => {
+        registerSW();
+      });
+   
+      // Register the Service Worker
+      async function registerSW() {
+        if ('serviceWorker' in navigator) {
+          try {
+            await navigator
+                  .serviceWorker
+                  .register('serviceworker.js');
+          }
+          catch (e) {
+            console.log('SW registration failed');
+          }
+        }
+      }
+   </script>
+   <script src="serviceworker.js"></script>
   </body>
 </html>
