--- a/JavaScript_Game/game.html
+++ b/JavaScript_Game/game.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./game.css">
     <script src="./game.js"></script>
+    <link rel="manifest" href="manifest.json">
 </head>
 
 <body>
@@ -33,6 +34,8 @@
     <img id="layer2" src="./photos/layer2.png ">
     <img id="layer3" src="./photos/layer3.png">
     <img id="layer4" src="./photos/layer4.png">
+    <script src="service_worker.js"></script>
+    <script src="register_service_worker.js"></script>
 </body>
 
 </html>
